google.css
body {
    background: #202124; 
    margin: 0px;
}

.header {
    display: inline-block;
    width: 100%;
    text-align: right;
}

a {
    display: inline-block;
    padding: 15px;
    color: white;
    font-size: 13px;
    font-family: Arial, sans-serif;
    text-decoration: none;
    /* Allows for no underline inherent with links */
}

.center {
    height: 500px;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.search {
    padding: 20px; 
}

.search_bar {
    padding: 10px;
    display: flex;
    min-height: 44px;
    width: 500px; 
}

.search_bar input {
    border: 1px solid #5f6368;
    border-radius: 24px;
    padding-left: 15px;
    padding-right: 15px;
    width: 500px;
    background: transparent;
    font-family: arial, sans-serif;
    line-height: 22px;
    margin-bottom: 8px;
    font-size: 16px;
    color: #e8eaed;
    outline: none;
}

.buttons {
    display: block;
    padding-top: 18px;
    height: 70px;
    text-align: center;
}

.buttons input {
    background-color: #303134;
    border: 1px solid #303134;
    border-radius: 4px;
    color: #e8eaed;
    font-family: arial, sans-serif;
    font-size: 14px;
    margin: 11px 4px;
    padding: 0 16px;
    line-height: 27px; 
    height: 36px; 
    text-align: center;
}

img {
    height: 92px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.corner img {
    height: 92px;
}

label {
    margin-left:10px;
    color: #f28b82;
    font-family: arial,sans-serif;
    font-size: 20px;
}

.appbar {
    margin: 25px 35px;
}

.line {
    color: #3c4043;
    border-bottom: 1px solid;
    display: block;
}

.advanced_search {
    margin: 40px 2% 0 45px;
    display: block;
    width: 100%;
}

.advanced_search input {
    display: inline-block;
    vertical-align: middle; 
    text-align: left;
    background-color: #202124;
    border: 1px solid #5f6368;
    color: #bdc1cb;
    font-size: 13px;
    height: 25px;
    padding: 1px 8px;
    padding-right: 16px;
    min-width: 167px;
    margin-right: 16px;
    width: 50%;
}

.pages {
    font-size: 16px;
    color: #e8eaed;
    height: 30px;
    font-family: arial, sans-serif;
    height: 30px;
}

.pages-wrapper {
    height: 30px;
    vertical-align: middle;
    display: table-cell;
    padding-bottom: 42px;
}

span {
    color: #bdc1cb;
    font-family: arial, sans-serif;
    font-size: 13px;

}

.span-wrapper {
    height: 30px;
    vertical-align: middle;
    display: table-cell;
}

.span_block {
    display: inline-block;
    width: 167px;
    min-height: 42px;
    line-height: 16px;
    vertical-align: middle;
}

